# python-tcp-server

./: Makefile  pyproject.toml
python_tcp_server/: client.py  server.py
python_tcp_server/agent/: agent.py
python_tcp_server/client/: client.py
python_tcp_server/proxy/: proxy.py  server.py
